--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,11 @@
 <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <title>MobileWebUI.COM</title>
+<meta name="author" content="Juno Leung">
 <meta name="description" content="MobileWebUI.COM" />
 <meta name="HandheldFriendly" content="True" />
 <meta name="MobileOptimized" content="320" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="/assets/vendor/onepage-scroll/onepage-scroll.css" />
 <link rel="stylesheet" type="text/css" href="/assets/css/app.css" />
