--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer>
 </footer>
-<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script src="/assets/vendor/onepage-scroll/jquery.onepage-scroll.min.js"></script>
-<script src="/assets/vendor/headroom.js/jQuery.headroom.min.js"></script>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+<script src="/assets/vendor/jquery/jquery-2.1.0.min.js"></script>
+<script src="/assets/vendor/jquery-waypoints/waypoints.min.js"></script>
+<script src="/assets/vendor/swipe/swipe.js"></script>
+<script src="/assets/vendor/bootstrap/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="/assets/js/app.js"></script>
