--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,6 +6,6 @@
 <meta name="HandheldFriendly" content="True" />
 <meta name="MobileOptimized" content="320" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="/assets/vendor/onepage-scroll/onepage-scroll.css" />
+<link rel="stylesheet" href="/assets/vendor/bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" href="/assets/vendor/animate.css/animate.min.css">
 <link rel="stylesheet" type="text/css" href="/assets/css/app.css" />
