--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,8 @@
 <meta name="description" content="MobileWebUI.COM" />
 <meta name="HandheldFriendly" content="True" />
 <meta name="MobileOptimized" content="320" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui,user-scalable=no" />
+<meta http-equiv="cleartype" content="on">
 <link rel="stylesheet" href="/assets/vendor/bootstrap/css/bootstrap.min.css">
 <link rel="stylesheet" href="/assets/vendor/animate.css/animate.min.css">
 <link rel="stylesheet" type="text/css" href="/assets/css/app.css" />
