--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,8 @@
 <footer>
 </footer>
-<script src="/assets/vendor/jquery/jquery-2.1.0.min.js"></script>
+<!-- <script src="/assets/vendor/jquery/jquery-2.1.0.min.js"></script>
 <script src="/assets/vendor/jquery-waypoints/waypoints.min.js"></script>
 <script src="/assets/vendor/swipe/swipe.js"></script>
 <script src="/assets/vendor/bootstrap/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="/assets/js/app.js"></script>
+<script type="text/javascript" src="/assets/js/app.js"></script> -->
+<script data-main="/assets/js/main.js" src="/assets/vendor/requirejs/require.min.js"></script>
